# birda

./: .gemini-review.diff  .gitignore  .release-trigger  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.txt  Taskfile.yml  about.hbs  about.toml  action.yml  build.rs  manifest.template.json  registry.json
.github/: dependabot.yml
.github/workflows/: action-test.yml  ci.yml  claude-code-review.yml  licenses.yml  nsis-test.yml  release.yml
.sentrux/: baseline.json  rules.toml
data/labels/birdnet_v2.4/: BirdNET_GLOBAL_6K_V2.4_Labels_ca.txt  BirdNET_GLOBAL_6K_V2.4_Labels_pl.txt  BirdNET_GLOBAL_6K_V2.4_Labels_sr.txt  BirdNET_GLOBAL_6K_V2.4_Labels_zh.txt
docs/: clip-extraction.md  code-review-findings.md  critical-issues-fix-plan-v2.md  json-output.md  macos-signing-fix.md  nsis-evaluation-result.md  nsis-test-installer-design.md  species-list-usage.md  windows-guide.md
docs/design/: 2026-02-05-stdout-ndjson-mode-design.md  2026-02-05-stdout-ndjson-mode-plan.md
docs/plans/: 2026-02-09-nsis-test-installer.md
docs/superpowers/plans/: 2026-04-06-update-command.md  2026-04-29-sentrux-quality-fixes.md  2026-05-07-bat-detection.md
docs/superpowers/specs/: 2026-04-06-update-command-design.md  2026-05-07-bat-detection-design.md
hooks/: pre-commit
installer/macos/: entitlements.plist
installer/windows/: EnvVarUpdate.nsh  INSTALLER_LICENSE.txt  TENSORRT_INFO.txt  birda.iss  birda.nsi
scripts/: install-birda.sh  run-inference.sh
src/: constants.rs  error.rs  lib.rs  main.rs
src/audio/: chunker.rs  decode.rs  mod.rs  resample.rs
src/cli/: args.rs  clip.rs  help.rs  mod.rs  species.rs  validators.rs
src/clipper/: command.rs  extractor.rs  grouper.rs  mod.rs  parser.rs  writer.rs
src/config/: bat.rs  file.rs  mod.rs  paths.rs  range_filter.rs  types.rs  validate.rs
src/gpu/: mod.rs  watchdog.rs
src/inference/: classifier.rs  cuda_detection.rs  library_detection.rs  mod.rs  provider.rs  range_filter.rs  runtime.rs  tensorrt_detection.rs
src/locking/: file_lock.rs  mod.rs
src/output/: audacity.rs  csv.rs  json.rs  json_envelope.rs  kaleidoscope.rs  mod.rs  parquet.rs  progress.rs  raven.rs  reporter.rs  types.rs  writer.rs
src/pipeline/: config.rs  coordinator.rs  mod.rs  processor.rs
src/registry/: installer.rs  license.rs  loader.rs  mod.rs  types.rs
src/update/: checksum.rs  constants.rs  manifest.rs  mod.rs  platform.rs  replace.rs
src/utils/: date.rs  mod.rs  species_list.rs
tests/: cli_output_integration.rs  clip_integration_test.rs  clipper_grouper_test.rs  clipper_parser_test.rs  clipper_writer_test.rs  csv_bom_test.rs  cuda_detection_test.rs  providers_command_test.rs  runtime_init_test.rs  species_list_integration.rs  stdout_integration.rs  tensorrt_detection_test.rs
