[package]
name = "birda"
version = "0.9.1"
edition = "2024"
rust-version = "1.92"
description = "CLI tool for bird species detection using BirdNET and Perch models"
license = "MIT"
repository = "https://github.com/tphakala/birda"
readme = "README.md"
keywords = ["birdnet", "audio", "machine-learning", "bioacoustics"]
categories = ["science", "multimedia::audio", "command-line-utilities"]

[features]
default = ["cuda"]
cuda = ["birdnet-onnx/cuda"]

[dependencies]
birdnet-onnx = "1.0.2"
symphonia = { version = "0.5", features = ["aac", "mp3", "flac", "wav", "pcm"] }
rubato = "1.0"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "macros"] }
indicatif = "0.18"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
multiple_crate_versions = "allow"
